--- a/exit-classroom/hall-pass.html
+++ b/exit-classroom/hall-pass.html
@@ -1,1 +1,2 @@
-<h1> 
+<h1> You run to the bathroom with the hallpass. What do you do next?
+<a href = "../endings/jumpscare.html"> You go back to class and Mr. Mueller jumpscares you instead </a>
