Wed, Feb 5, 2025, 2:58 PM -05:00

--- a/exit-classroom/hall-pass.html
+++ b/exit-classroom/hall-pass.html
@@ -1,2 +1,5 @@
 <h1> You run to the bathroom with the hallpass. What do you do next?
-<a href = "../endings/jumpscare.html"> You go back to class and Mr. Mueller jumpscares you instead </a>
+<br>
+<a href = "../endings/jumpscare.html">You go back to class</a>
+<br>
+<a href = "
