Wed, Feb 5, 2025, 3:05 PM -05:00

--- a/exit-classroom/hall-pass.html
+++ b/exit-classroom/hall-pass.html
@@ -1,4 +1,4 @@
-<h1> You run to the bathroom with the hallpass. What do you do next?
+<h1> You run to the bathroom with the hallpass. What do you do next? </h1> 
 <br>
 <a href = "../endings/jumpscare.html">You go back to class</a>
 <br>
