fixed? links in prank-mueller.html

--- a/exit-classroom/prank-mueller.html
+++ b/exit-classroom/prank-mueller.html
@@ -1,5 +1,5 @@
 <h1> You walked back to class and wanted to prank Mr. Mueller. What is up your sleeve? </h1>
 <br>
-<a href = "endings/scare.html">Knock on his door </a>
+<a href = "../endings/scare.html">Knock on his door </a>
 <br>
-<a href = "endings/jumpscare.html">Change your mind </a>
+<a href = "../endings/jumpscare.html">Change your mind </a>
