--- a/door.html
+++ b/door.html
@@ -1,4 +1,4 @@
-<h1>You are at the door</h1>
+<h1>You are at the door, What can you do?</h1>
 
 <a href = "computer/at-computer.html">Walk to your seat</a>
 <br>
