--- a/exit-classroom/hall-pass.html
+++ b/exit-classroom/hall-pass.html
@@ -1,5 +1,5 @@
-<h1> You run to the bathroom with the hallpass. What do you do next? </h1> 
+<h1> You run to the bathroom with the hallpass. What do you do next? </h1>
 <br>
-<a href = "../endings/jumpscare.html">You go back to class</a>
+<a href = "../endings/jumpscare.html">Go back to class</a>
 <br>
 <a href = "id.html">Go to bathroom</a>
