fixed? text in id.html

--- a/exit-classroom/id.html
+++ b/exit-classroom/id.html
@@ -1,5 +1,5 @@
 <h1> You swipe your ID, You noticed that there's a very long line, what do you do? </h1>
 <br>
-<a href = "endings/failed-to-prank.html">Wait for the bathroom</a>
+<a href = "../endings/fail-to-prank.html">Wait for the bathroom</a>
 <br>
 <a href = "prank-mueller.html">Walk back to class </a>
