--- a/endings/fail-to-prank.html
+++ b/endings/fail-to-prank.html
@@ -1,3 +1,3 @@
 <h1> You failed to prank Mr. Mueller! Better luck next time.</h1>
 <br>
-<a href = "door.html">Go back </a>
+<a href = "../door.html">Go back </a>
