added? text in life.html

--- a/exit-classroom/prank-mueller.html
+++ b/exit-classroom/prank-mueller.html
@@ -2,4 +2,4 @@
 <br>
 <a href = "../endings/scare.html">Knock on his door </a>
 <br>
-<a href = "../endings/jumpscare.html">Change your mind </a>
+<a href = "../endings/life.html">Change your mind </a>
