Thu, Feb 6, 2025, 1:58 PM -05:00

--- a/endings/jumpscare.html
+++ b/endings/jumpscare.html
@@ -1,3 +1,3 @@
 <h1> You got jumpscared by Mr. Mueller! You screamed and died... </h1>
 <br>
-<a href = "../door.html"> Revive and go back</a>
+<a href = "../door.html"> Revive & Restart</a>
