--- a/endings/broken-ide.html
+++ b/endings/broken-ide.html
@@ -1,3 +1,3 @@
 <h1>You lied for no reason and your IDE is still broken</h1>
 <br>
-<a href = "../door.html">Restart</a>
+<a href = "https://darrenl5941.github.io/prank-mr.mueller/door.html">Restart</a>
