--- a/endings/fixed-ide.html
+++ b/endings/fixed-ide.html
@@ -1,3 +1,3 @@
 <h1>Your IDE is fixed!</h1>
 <br>
-<a href = "../door.html">Restart</a>
+<a href = "https://darrenl5941.github.io/prank-mr.mueller/door.html">Restart</a>
