--- a/computer/think-of-prank.html
+++ b/computer/think-of-prank.html
@@ -1,5 +1,5 @@
 <h1>You are thinking of a way to prank. Mr. Mueller</h1>
 <br>
-<a href = "https://darrenl5941.github.io/prank-mr.mueller/endings/rickroll.html">Search up a youtube video and call over Mr. Mueller</a>
+<a href = "endings/rickroll.html">Search up a youtube video and call over Mr. Mueller</a>
 <br>
-<a href = "https://darrenl5941.github.io/prank-mr.mueller/computer/break-ide.html">Go to your IDE because you are bored</a>
+<a href = "break-ide.html">Go to your IDE because you are bored</a>
