--- a/endings/scare.html
+++ b/endings/scare.html
@@ -1,3 +1,3 @@
 <h1> You pranked Mr. Mueller and he screamed! Congrats on that W! </h1>
 <br>
-<a href = "https://darrenl5941.github.io/prank-mr.mueller/door.html"> Go back </a>
+<a href = "door.html"> Go back </a>
