Revert "clean up links"
This reverts commit 0a88cdc46cd5d0bb79444532aaa514b13a244b39.

--- a/computer/at-computer.html
+++ b/computer/at-computer.html
@@ -1,5 +1,5 @@
 <h1>You are at your computer</h1>
 <br>
-<a href = "/endings/fail-to-prank.html">Do what you are supposed to do</a>
+<a href = "https://darrenl5941.github.io/prank-mr.mueller/endings/fail-to-prank.html">Do what you are supposed to do</a>
 <br>
-<a href = "think-of-prank.html">Think of a way to prank Mr. Mueller</a>
+<a href = "https://darrenl5941.github.io/prank-mr.mueller/computer/think-of-prank.html">Think of a way to prank Mr. Mueller</a>
