--- a/computer/break-ide.html
+++ b/computer/break-ide.html
@@ -1,5 +1,5 @@
 <h1>You broke your IDE, Mr. Mueller walks over</h1>
 <br>
-<a href = "endings/broken-ide.html">Tell Mr. Mueller that your IDE is actually fine and that it was just a prank</a>
+<a href = "../endings/broken-ide.html">Tell Mr. Mueller that your IDE is actually fine and that it was just a prank</a>
 <br>
-<a href = "endings/fixed-ide.html">Ask Mr. Mueller to help you fix your IDE</a>
+<a href = "../endings/fixed-ide.html">Ask Mr. Mueller to help you fix your IDE</a>
