--- a/endings/life.html
+++ b/endings/life.html
@@ -1,3 +1,3 @@
 <h1> You go back to your seat and continue on with life, but failed to prank Mr. Mueller </h1>
 <br>
-<a href = "../door.html"> Question reality? </a>
+<a href = "https://darrenl5941.github.io/prank-mr.mueller/door.html"> Question reality? </a>
