Revert "change endings links"
This reverts commit 6346d36cb8bd6d98e611147cb5d0449d708d00c7.

--- a/endings/fail-to-prank.html
+++ b/endings/fail-to-prank.html
@@ -1,4 +1,4 @@
 <h1>You failed to prank Mr. Mueller</h1>
 <br>
-<a href = "https://darrenl5941.github.io/prank-mr.mueller/door.html">Restart</a>
+<a href = "../door.html">Restart</a>
 
