--- a/endings/jumpscare.html
+++ b/endings/jumpscare.html
@@ -1,3 +1,3 @@
 <h1> You got jumpscared by Mr. Mueller! You screamed and died... </h1>
 <br>
-<a href = "https://darrenl5941.github.io/prank-mr.mueller/door.html"> Revive & Restart </a>
+<a href = "../door.html"> Revive & Restart </a>
